# Zoobenthic_Community_Indicator

./: .python-version  README.md  pyproject.toml
artifacts/: pca_evaluation_demo.json
artifacts/pca_train_test/: labels_test.csv  labels_train.csv  metadata.json  scores_test.csv  scores_train.csv  variable_order.csv
artifacts/weighted_pca_runs/: all_summaries.json
data/data_documents/: variable_explaination.aux  variable_explaination.fdb_latexmk  variable_explaination.fls  variable_explaination.tex
data/interim/: chem_clean.parquet  env_clean.parquet  taxa_clean.parquet
data/processed/: complete_env_taxa.xlsx  complete_env_taxa_chemical.xlsx  master_example.csv  master_example_shuffled.csv  master_pollution_rank.csv  master_raw.csv
examples/: pca_usage_example.py
notebooks/: 00*_build_data_operation.ipynb  00_build_data.ipynb  00_build_data_operation.ipynb  00_build_interim.ipynb  00_idea_visualization.ipynb  01_EDA.ipynb  01_pca_pollution_assessment.ipynb  01_weighted_PCA_scores.ipynb  02*_ordination_metrices.ipynb  02_Contamination_Assessment.ipynb  02_ordination_metrices.ipynb  02_pca_evaluation_all_functions.ipynb  03_high_api_evaluation_demo.ipynb  04**_comprehensive_weight_PCA_and_assessment copy.ipynb  04**_comprehensive_weight_PCA_and_assessment.ipynb  04*_comprehensive_weight_PCA_and_assessment copy.ipynb  04_weighted_pca_multi_config_evaluation.ipynb  Transform.ipynb  idea_visualization.ipynb
tests/: test_cleaning.py  test_dataframe_merge.py  test_transform.py
writing_documents/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex  main.toc
(+50 files in other folders)
