[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zci"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = ["numpy", "pandas", "scikit-learn", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["zci*"]

[tool.black]
line-length = 100

[tool.ruff]
line-length = 100
select = ["E","F","I","UP","B"]